# hydra-gate

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  commands.rs  crypto.rs  engine.rs  lib.rs  main.rs  state.rs
src/components/: AddProxyModal.tsx  DeleteProxyModal.tsx  EditProxyModal.tsx  ProxyList.tsx  SettingsPage.tsx
